# -

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT_GUIDE.md  MISTAKES.md  Prd.md  README.md  openclaw-cloudpet-skill.md  package-lock.json  package.json  新增finalizer .md  最新需求.md
.claude/: settings.json  settings.local.json
.claude/hooks/: forward-event.sh
cloudpet-mcp/: index.js  package-lock.json  package.json
cloudpet-mcp/config/: mcporter.json
docs/: DEV_CHECKLIST.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  ROOT_STRUCTURE.md  SETUP_CHECKLIST.md
docs/architecture/: ARCHITECTURE.md  DATA_FLOW.md  EVENTS.md  TECH_DEBT.md
docs/logs/: SESSION_LOG.md
docs/process/: AI_COLLAB_PLAYBOOK.md  BUG_TRIAGE_TEMPLATE.md  REGRESSION_CHECKLIST.md  SETUP_CHECKLIST.md  TEST_STRATEGY.md
docs/specs/: AI-CHAT.md  FEATURE_MATRIX.md  FEATURE_SPEC_TEMPLATE.md  FOCUS.md  INDEX.md  MAIN-WINDOW.md  MEMORY.md  PROJECT-STRUCTURE-CLEANUP-PRD.md  REMINDER.md  ROADMAP.md  SCHEDULER.md  SETTINGS.md  SPEECH-BUBBLE.md  TODO.md
scripts/ralph/: CLAUDE.md  VALIDATOR.md  dashboard-p.html  dashboard.html  dashboard.py  prd.json  progress.txt  ralph.py  start-ralph.ps1
src/: App.css  App.tsx  CLAUDE.md  STATE.md  main.tsx  types.ts
src-tauri/: CLAUDE.md  Cargo.toml  INTERFACE.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bridge_server.rs  db.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs  settings.rs  system.rs  todo.rs  weather.rs
src/components/: CLAUDE.md  (+1 more)
tasks/: prd-l1-architecture-code-layer-governance.md  prd-layer-1-architecture.md
(+54 files in other folders)
