[package]
name = "zhushou"
version = "0.1.0"
description = "云朵桌面宠物助手"
authors = ["yang"]
edition = "2021"

[lib]
name = "zhushou_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
xcap = "0.0.14"
base64 = "0.22"
image = "0.25"
